configured default tab on programs page; fixed issue where social icons in footer are too large; added theme color meta tag to html for mobile navbar color

--- a/grav/user/themes/quark/scss/template/_social-icons.scss
+++ b/grav/user/themes/quark/scss/template/_social-icons.scss
@@ -59,24 +59,24 @@
         text-decoration: none;
 }
 
-@media screen and (max-width: 840px) {
-    .icon-button {
-        font-size: 3rem;
-        height: 4rem;
-        width: 4rem;
-        i {
-            height: 4rem;
-            width: 4rem;
-            line-height: 4rem;
-        }
-				&:hover span {
-					width: 4rem;
-					height: 4rem;
-					border-radius: 4rem;
-					margin: -2rem;
-				}
-    }
-}
+// @media screen and (max-width: 840px) {
+//     .icon-button {
+//         font-size: 3rem;
+//         height: 4rem;
+//         width: 4rem;
+//         i {
+//             height: 4rem;
+//             width: 4rem;
+//             line-height: 4rem;
+//         }
+// 				&:hover span {
+// 					width: 4rem;
+// 					height: 4rem;
+// 					border-radius: 4rem;
+// 					margin: -2rem;
+// 				}
+//     }
+// }
 
 
 
